A bunch of new utilities; mainly for Wicket use.
[ADDED]     ListIteratorView - a ListIterator that provides access to
            the current element.
[ADDED]     FocusOnReady - Focus a component on the page.
[ADDED]     JSLink - Run JavaScript code when a component is clicked.
[ADDED]     {Ajax,}EditableLabel - A label that can be toggled editable,
            and updates submits its model via AJAX onBlur.
[ADDED]     AjaxEditableImage - An image that can be toggled editable
            allowing the user to upload a new image.
[ADDED]     Localized - A way for objects to localize themselves.
[ADDED]     TextFieldWindow - An AJAX window with a text field.
[ADDED]     AjaxHooks - Connecting JavaScript and Wicket page events.
[ADDED]     JSUtils - Safe JavaScript function call generation.
[ADDED]     AbstractIteratorProvider - Easily make a data provider from
            an iterator.